--- a/devcard/devcard_mvc/Views/Shared/_Layout.cshtml
+++ b/devcard/devcard_mvc/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
 
 				<div id="navigation" class="collapse navbar-collapse flex-column">
 					<div class="profile-section pt-3 pt-lg-0">
-						<img class="profile-image mb-3 rounded-circle mx-auto" src="assets/images/me.jpeg" alt="image">
+						<img class="profile-image mb-3 rounded-circle mx-auto" src="~/assets/images/me.jpeg" alt="image">
 
 						<div class="bio mb-3">
 							سلام جواد ابولی پور هستم از موسسه آموزشی هوش برتر. به وبسایت شخصی من خوش
@@ -51,12 +51,12 @@
 					</div>
 					<ul class="navbar-nav flex-column text-right">
 						<li class="nav-item">
-							<a class="nav-link" href="index.html">
+							<a class="nav-link" href="@Url.Action("index",controller:"Home")">
 								<i class="fas fa-user fa-fw ml-2"></i>صفحه اصلی<span class="sr-only">(current)</span>
 							</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="contact.html">
+							<a class="nav-link" asp-controller="Home" asp-action="contact">
 								<i class="fas fa-envelope-open-text fa-fw ml-2"></i>ارتباط با ما
 							</a>
 						</li>
